// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Butt component matches the snapshot 1`] = `
<button
  className="btn orange NormalSize"
  onClick={[Function]}
  type="button"
>
  1
</button>
`;

exports[`ButtonPanel component matches the snapshot 1`] = `
<button
  className="btn orange NormalSize"
  onClick={[Function]}
  type="button"
/>
`;
